# HaproxyForAndroid

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/bybbs/haproxy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/lua-5.3.4/doc/: lua.1
app/src/main/cpp/lua-5.3.4/src/: lmathlib.c  luaconf.h
app/src/main/java/org/bybbs/haproxy/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/org/bybbs/haproxy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
